# ib

./: .gitignore  README.md  analyze.py  build.py  calculate.py  classify.py  clear.py  derive.py  execute.py  find_errors.py  guage.py  helper.py  main.py  nse_old.py  pyproject.toml  raw_ios.py  requirements.txt  run.py  workbench.ipynb
conf/: config.yml
config/: config.yml  log.yml  snp_config.yml  symbol_count.yml
data/: df_nkd.pkl  df_prot_rolls.pkl  df_reap.pkl  df_unds.pkl  protect_rolls.pkl  symbols.pkl  traded_covers.pkl  traded_deorphs.pkl  traded_nakeds.pkl  traded_protects.pkl  traded_reaps.pkl
data/master/: df_chains.pkl  nse_chains.pkl  nse_margins.pkl
data/master/zArchives/: nse_chains.pkl  nse_margins.pkl
notebooks/: _nb_template.ipynb  _template.ipynb  analysis.ipynb  build.ipynb  history.ipynb  log_experiments.ipynb  nse.ipynb  nse_jsons.ipynb  save_file.ipynb  ytest.ipynb
nsepy/: commons.py  support.py
src/: dclass.py  engine.py  generate.py  main.py  nse.py  nse_eq_hist.ipynb  nse_eq_hist.py  refmap.yml  snp.ipynb  support.py  test.ipynb
src/nse/: nse.py
